# sandbox-rs

./: .dockerignore  Cargo.toml  Dockerfile  README.md  TROUBLESHOOTING.md  docker-compose.yml  flake.nix  release.toml
.github/workflows/: ci.yml
crates/sandbox-cgroup/: Cargo.toml
crates/sandbox-cgroup/src/: cgroup.rs  lib.rs  rlimit.rs
crates/sandbox-cgroup/tests/: rlimit.rs
crates/sandbox-core/: Cargo.toml
crates/sandbox-core/src/: capabilities.rs  error.rs  lib.rs  privilege.rs  util.rs
crates/sandbox-fs/: Cargo.toml
crates/sandbox-fs/src/: filesystem.rs  lib.rs  volumes.rs
crates/sandbox-landlock/: Cargo.toml
crates/sandbox-landlock/src/: lib.rs  ruleset.rs
crates/sandbox-landlock/tests/: landlock.rs
crates/sandbox-namespace/: Cargo.toml
crates/sandbox-namespace/src/: config.rs  lib.rs  user_ns.rs
crates/sandbox-rs/: Cargo.toml
crates/sandbox-rs/examples/: basic.rs  cgroup_limits.rs  overlay_filesystem.rs  stream_basic.rs
crates/sandbox-rs/src/: controller.rs  lib.rs
crates/sandbox-rs/src/execution/: init.rs  mod.rs  process.rs  stream.rs
crates/sandbox-rs/src/monitoring/: ebpf.rs  mod.rs  monitor.rs
crates/sandbox-rs/tests/: integration_tests.rs  stress_tests.rs
crates/sandbox-seccomp/: Cargo.toml
crates/sandbox-seccomp/src/: bpf.rs  lib.rs  profile.rs  syscall_table.rs
crates/sandbox-seccomp/tests/: seccomp.rs
examples/: api_compute.rs  api_io.rs  api_network.rs  basic.rs  cli_basic.rs  error_handling.rs  namespace_config.rs  overlay_filesystem.rs  seccomp_profiles.rs  stream_basic.rs  stream_long_running.rs  stream_non_blocking.rs
lib/: controller.rs  lib.rs  utils.rs
lib/execution/: init.rs  process.rs  stream.rs  tests.rs
lib/isolation/: seccomp.rs  seccomp_bpf.rs
lib/monitoring/: ebpf.rs  monitor.rs
lib/network/: config.rs  tests.rs
lib/resources/: cgroup.rs  tests.rs
lib/storage/: filesystem.rs  mod.rs  tests.rs  volumes.rs
sandbox-ctl/: Cargo.toml
sandbox-ctl/src/: cli.rs  commands.rs  logging.rs  main.rs  profiles.rs  runner.rs
src/: controller.rs  errors.rs  lib.rs  main.rs  utils.rs
src/execution/: init.rs  mod.rs  process.rs  stream.rs  tests.rs
src/isolation/: mod.rs  namespace.rs  seccomp.rs  seccomp_bpf.rs  tests.rs
src/monitoring/: ebpf.rs  mod.rs  monitor.rs  tests.rs
src/network/: mod.rs  tests.rs
src/resources/: cgroup.rs  mod.rs
src/storage/: filesystem.rs  tests.rs  volumes.rs
tests/: integration_tests.rs  stress_tests.rs
