[workspace]
members = [".", "sandbox-ctl"]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2024"
authors = ["Erick Jesus <erick.jesus2060@gmail.com>"]
license = "MIT"
repository = "https://github.com/ErickJ3/sandbox-rs"
homepage = "https://github.com/ErickJ3/sandbox-rs"

[package]
name = "sandbox-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A comprehensive Rust sandbox implementation that provides process isolation, resource limiting, and syscall filtering for secure program execution."
documentation = "https://docs.rs/sandbox-rs"
keywords = ["sandbox", "isolation", "security", "linux", "seccomp"]
categories = ["development-tools", "os"]
readme = "README.md"

[workspace.dependencies]
sandbox-rs = { path = "." }

[dependencies]
nix = { version = "0.30", features = ["process", "sched", "mount", "resource", "signal", "fs"] }
libc = "0.2"
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23"
log = "0.4"
seccompiler = "0.5"

[lib]
name = "sandbox_rs"
path = "lib/lib.rs"

[profile.release]
opt-level = 3
lto = true
strip = true
