[package]
name = "sandbox-ctl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI tool for sandbox-rs - A comprehensive Rust sandbox implementation"
keywords = ["sandbox", "isolation", "security", "linux", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
sandbox-rs.workspace = true
clap = { version = "4.5", features = ["derive"] }
console = "0.16"
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "sandbox-ctl"
path = "src/main.rs"
