[package]
name = "sandbox-cgroup"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cgroup v2 resource limits and setrlimit fallback for sandbox-rs"
keywords = ["sandbox", "cgroup", "resources", "linux"]
categories = ["development-tools", "os"]

[dependencies]
sandbox-core.workspace = true
nix.workspace = true
libc = "0.2"
log = "0.4"

[dev-dependencies]
tempfile = "3.23"
