[package]
name = "sandbox-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core types, errors, and capability detection for sandbox-rs"
keywords = ["sandbox", "isolation", "security", "linux"]
categories = ["development-tools", "os"]

[dependencies]
thiserror = "2.0"
libc = "0.2"
log = "0.4"
